--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</blockquote>
 	<p>Ovo je nastavak teksta u istom paragrafu.
 	</p>
-	<p style="color: black;">U ovom tekstu ću <span>promijeniti stil:</span>tekst je zelen, a u spanu je crven.</p>
+	<p style="color: black;">U ovom tekstu ću <span>promijeniti stil:</span>.</p>
 	
 	<a href="https://en.wikipedia.org/wiki/Cat">Link na neku drugu stranicu.</a><br/>
 	<a href="vjezba1.html">Link na neki drugi dokument.</a><br/>
